--- a/index.html
+++ b/index.html
@@ -2,34 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GitHub to Plain Text Converter | Convert Code Repositories to Text</title>
-    <meta name="description" content="Convert GitHub repositories to plain text files easily. Our tool helps you transform code into a single formatted text file for better readability and analysis.">
+    <meta name="description" content="Convert GitHub repositories to plain text files easily. Transform code into a single formatted text file for better readability and analysis.">
     <meta name="keywords" content="GitHub, code converter, plain text, repository, code analysis">
-    <meta name="author" content="abinthomasonline">
-    <link rel="canonical" href="https://repo2txt.simplebasedomain.com/">
+    <meta name="author" content="lucesgabriel">
+    <!-- Update the canonical link to your own domain if applicable -->
+    <!-- <link rel="canonical" href="https://yourdomain.com/"> -->
     <meta property="og:title" content="GitHub to Plain Text Converter">
     <meta property="og:description" content="Convert GitHub repositories to plain text files easily. Transform code into a single formatted text file.">
-    <meta property="og:url" content="https://repo2txt.simplebasedomain.com/">
+    <!-- <meta property="og:url" content="https://yourdomain.com/"> -->
     <meta property="og:type" content="website">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CYF86LN5WM"></script>
+    <!-- Remove or update Google Analytics code if not needed -->
+    <!--
+    <script async src="https://www.googletagmanager.com/gtag/js?id=YOUR_GOOGLE_ANALYTICS_ID"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
-        gtag('config', 'G-CYF86LN5WM');
+        gtag('config', 'YOUR_GOOGLE_ANALYTICS_ID');
     </script>
+    -->
     <script src="js/jszip.min.js"></script>
 </head>
 <body class="bg-gray-100 min-h-screen p-4 md:p-8 text-gray-600">
     <div class="max-w-4xl mx-auto bg-white rounded-lg shadow-md p-6 relative">
-        <a href="https://github.com/abinthomasonline/repo2txt" target="_blank" class="absolute top-2 right-2">
+        <a href="https://github.com/lucesgabriel/repo2txt" target="_blank" class="absolute top-2 right-2">
             <i data-lucide="github" class="w-8 h-8 text-gray-600 hover:text-gray-800"></i>
         </a>
         <h1 class="text-3xl font-bold mb-2 text-center text-gray-600">GitHub to Plain Text</h1>
@@ -87,7 +89,7 @@
         </div>
     </div>
     <footer class="mt-8 text-center text-sm text-gray-500">
-        <p>If you encounter any errors, please email <a href="mailto:abinthomasonline@gmail.com" class="text-blue-500 hover:text-blue-700">abinthomasonline@gmail.com</a> or <a href="https://github.com/abinthomasonline/repo2txt/issues" target="_blank" class="text-blue-500 hover:text-blue-700">raise a GitHub issue</a>.</p>
+        <p>If you encounter any errors, please email <a href="mailto:your_email@example.com" class="text-blue-500 hover:text-blue-700">your_email@example.com</a> or <a href="https://github.com/lucesgabriel/repo2txt/issues" target="_blank" class="text-blue-500 hover:text-blue-700">raise a GitHub issue</a>.</p>
     </footer>
     <script type="module" src="js/index.js"></script>
 </body>
